--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,8 @@
-certifi==2018.4.16
+# Created by 'make update-requirements-txt'. DO NOT EDIT!
+certifi==2020.6.20
 chardet==3.0.4
-idna==2.6
-lxml==4.2.1
-requests==2.20.0
-urllib3==1.24.2
+idna==2.10
+lxml==4.6.1
+requests==2.24.0
+urllib3==1.25.11
+wasabi==0.8.0
