--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,8 @@
 # Created by 'make update-requirements-txt'. DO NOT EDIT!
-certifi==2020.6.20
-chardet==3.0.4
-idna==2.10
-lxml==4.6.2
-requests==2.24.0
-urllib3==1.25.11
-wasabi==0.8.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
+idna==3.3
+lxml==4.9.1
+requests==2.28.1
+urllib3==1.26.9
+wasabi==0.9.1
