--- a/.github/workflows/cronjob.yml
+++ b/.github/workflows/cronjob.yml
@@ -1,4 +1,4 @@
-name: Test
+name: CronJob
 
 on:
   workflow_dispatch:
@@ -14,7 +14,7 @@ jobs:
 
     - name: Start containers
       run: |
-        docker-compose -f "docker-compose.yml" up -d --build
+        docker-compose -f "docker-compose.yaml" up -d --build
         sleep 10
 
     - uses: EndBug/add-and-commit@v9
