ci: Add ruff linting and pytest to GitHub Actions workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,19 @@ jobs:
       uses: astral-sh/setup-uv@v3
 
     - name: Install dependencies
-      run: uv sync
+      run: uv sync --dev
+
+    - name: Run ruff linting
+      run: uv run ruff check src/
+
+    - name: Run ruff formatting check
+      run: uv run ruff format --check src/
+
+    - name: Run pytest
+      run: uv run pytest
 
     - name: Run syntax check
-      run: uv run python -m py_compile src/get_count.py src/write_json_log.py
+      run: uv run python -m py_compile src/*.py
 
     - name: Test Docker build
       run: docker build -t govuk-stats-counter-test .
